--- a/views/fruits/show.ejs
+++ b/views/fruits/show.ejs
@@ -3,13 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fruits App</title>
+    <title><%= fruit.name %></title>
   </head>
   <body>
-    <h1>Welcome to the Fruits app!</h1>
-    <p>An app for collecting your favorite fruits.</p>
-
+    <h1><%= fruit.name %></h1>
     <a href="/fruits">Browse Fruits</a>
-    <a href="/fruits/new">Add New Fruit</a>
+
+    <% if (fruit.isReadyToEat) { %>
+    <p>This fruit is ready to eat!</p>
+    <% } else { %>
+    <p>This fruit is not ready to eat!</p>
+    <% } %>
   </body>
 </html>
