--- a/views/fruits/new.ejs
+++ b/views/fruits/new.ejs
@@ -4,18 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Create a Fruit</title>
+    <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
   <body>
     <h1>Create a New Fruit!</h1>
     <a href="/">Home</a>
-    <a href="/fruits/">Back to Fruits</a>
+    <a class="fruits-index-link" href="/fruits/">Back to Fruits</a>
 
     <form action="/fruits" method="POST">
       <label for="name">Fruit's Name:</label>
       <input type="text" name="name" id="name" />
-
-      <label for="isReadyToEat">Ready to Eat?</label>
-      <input type="checkbox" name="isReadyToEat" id="isReadyToEat" />
+      <div class="checkbox-div">
+        <label for="isReadyToEat">Ready to Eat?</label>
+        <input type="checkbox" name="isReadyToEat" id="isReadyToEat" />
+      </div>
 
       <button type="submit">Add Fruit</button>
     </form>
