--- a/views/fruits/show.ejs
+++ b/views/fruits/show.ejs
@@ -4,15 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= fruit.name %></title>
+    <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
   <body>
     <h1><%= fruit.name %></h1>
-    <a href="/fruits">Browse Fruits</a>
+    <a class="fruits-index-link" href="/fruits">Back to Fruits</a>
+    <a href="/fruits/<%= fruit._id %>/edit">Edit <%= fruit.name %></a>
 
     <% if (fruit.isReadyToEat) { %>
     <p>This fruit is ready to eat!</p>
     <% } else { %>
     <p>This fruit is not ready to eat!</p>
     <% } %>
+
+    <form action="/fruits/<%=fruit._id%>?_method=DELETE" method="POST">
+      <button type="submit">Delete <%= fruit.name %></button>
+    </form>
   </body>
 </html>
